style(components): fix spacing in Buttons

--- a/src/components/Buttons/buttons.module.less
+++ b/src/components/Buttons/buttons.module.less
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
   height: 48px;
+  margin-bottom: 24px;
 
   button {
     flex-grow: 1;
@@ -27,6 +28,6 @@
   }
 
   button:not(:last-child) {
-    margin-right: 25px;
+    margin-right: 24px;
   }
 }
